# AirFleet

./: .gitignore  CMakeLists.txt  main.cpp
src/controllers/cpp/: FlightController.cpp
src/controllers/headers/: FlightController.h
src/helpers/cpp/: DisplayMenu.cpp  SeederData.cpp
src/helpers/headers/: DisplayMenu.h  SeederData.h
src/interfaces/: Destination.cpp  Destination.h
src/models/: Flight.cpp  Flight.h  SeederData.cpp  SeederData.h
src/models/cpp/: Flight.cpp  FlightModel.cpp  Plane.cpp  PlaneModel.cpp  Ticket.cpp  TicketModel.cpp
src/models/headers/: Flight.h  FlightModel.h  Plane.h  PlaneModel.h  Ticket.h  TicketModel.h
